feat: updated to modern java and mc version